Spacing, font size, font color fixes

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,11 +16,11 @@ code {
 }
 
 a {
-  color: #00ECF2;
+  color: #6CCAFF;
 }
 
-.modal-body a {
-  color: #007bff;
+.ms-Modal a {
+  color: #0078D4;
 }
 
 a:hover, a:visited, a:active {
@@ -237,7 +237,6 @@ a:hover, a:visited, a:active {
 
 .light-text {
   display: inline;
-  font-size: 0.85em;
   margin-right: 0.75em;
   font-weight: 200;
 }
@@ -316,6 +315,10 @@ a:hover, a:visited, a:active {
   padding-right: 0.5em !important;
 }
 
+.sv_q_title {
+  line-height: 1.5 !important;
+}
+
 /*****************/
 /* Media queries */
 /*****************/
@@ -364,7 +367,8 @@ a:hover, a:visited, a:active {
 @media (max-width: 425px) {
   .title-bar {
     font-size: 20px;
-    padding-left: 4%;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 1rem;
     padding-bottom: 1rem;
   }
@@ -373,7 +377,7 @@ a:hover, a:visited, a:active {
     display: flex;
     background-color: #042b46;
     font-size: 16px;
-    padding-left: 4%;
+    padding-left: 15px;
     padding-top: 1rem;
     padding-bottom: 1rem;
     border: none;
@@ -399,6 +403,8 @@ a:hover, a:visited, a:active {
   .right-column {
     font-size: 14px;
     display: block;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 
   .column-header {
@@ -464,8 +470,8 @@ a:hover, a:visited, a:active {
   }
 
   .task-list {
-    margin-left: 2%;
-    margin-right: 2%;
+    margin-left: 15px;
+    margin-right: 15px;
     font-size: 12px;
   }
   
